object's basics and GarbageCollector's chapter

--- a/Начало.md
+++ b/Начало.md
@@ -1,4 +1,4 @@
-
+#вступительный_файл
 Эта карта знаний — структурированное представление всего, что я знаю о **веб-разработке с фокусом на фронтенд**.
 
 Она объединяет:
